--- a/index.html
+++ b/index.html
@@ -3,8 +3,46 @@
     <head>
         <meta charset="utf-8">
         <title>tes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <a href="https://youtu.be/dQw4w9WgXcQ?feature=shared">pilihan 1</a>
+        <h1>CHOOSE ONE
+        <img src="stiker.webp" width="50" height="50"> <br>
+        <a href="https://youtu.be/dQw4w9WgXcQ?feature=shared" target="_blank">1</a><br>
+        <a href="https://youtu.be/dQw4w9WgXcQ?feature=shared">2</a><br>
+        </h1>
     </body>
+    <br>
+    <br>
+    <form>
+        <label>
+            kamu dpt rickroll brp kli? <img src="stiker.webp" height="20" width="20"> ??<br>
+            <input type="text" placeholder="aowkowakoak">
+        </label>
+        <br>
+        <br>
+        <label>
+            metta baik <br>
+            <select>
+            <option>y</option>
+            <option>ya</option>
+            <option>iya</option>
+        </select>
+        </label>
+        <br>
+        <br>
+        hikmahnya apa? <br>
+        <label>
+            <input type="checkbox">metta baik hati
+        </label><br>
+        <label>
+            <input type="checkbox">metta sangat baik hati
+        </label><br>
+        <label></label>
+            <input type="checkbox">metta very kind heart
+        </label>
+        <br>
+        <br>
+        <input type="submit">
+    </form>
 </html>
